--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,12 +4,15 @@
 
 .pagination {
   display: flex;
-  justify-content: center;
   padding: 1rem;
+  flex-wrap: wrap;
 }
 
 .page-item {
-  margin: 0 0.25rem;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  margin-bottom: 0.7rem;
+  margin-top: 0.7rem;
 }
 
 .page-link {
